# gitStructure

./: README.md  pyproject.toml
git_structure/: main.py
