[tool.poetry]
name = "git-structure"
version = "0.1.0"
description = ""
authors = ["Paweł <kalicki.paul@icloud.com>"]
readme = "README.md"
packages = [{include = "git_structure"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
